# njin

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: compiler_warinings_setup.cmake  conan-setup.cmake  njin-setup.cmake
shader/: default.fs  default.vs
src/app/: CMakeLists.txt  main.cpp
src/njin/: CMakeLists.txt  config.h.in  core.cpp  core.h  program.cpp  program.h  renderer.cpp  renderer.h
